fixed image bug